--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -80,8 +80,6 @@
 \newcommand{\Z}{\mathbb{Z}}
 \newcommand{\R}{\mathbb{R}}
 
-\newcommand{\fact}{\mathbf{fact}}
-
 % Partial function arrow
 % https://math.stackexchange.com/questions/742614/notation-for-partial-function-set
 \newcommand{\pto}{\multimap\mspace{-2mu} \to}
@@ -103,6 +101,9 @@
 \DeclareMathOperator{\inl}{inl}
 \DeclareMathOperator{\inr}{inr}
 \DeclareMathOperator{\match}{match}
+
+\DeclareMathOperator{\hnf}{hnf}
+\DeclareMathOperator{\neutral}{neutral}
 
 % \DeclareMathOperator{\lett}{let}
 % \DeclareMathOperator{\inn}{in}
